<resources>
    <string name="app_name">DBProject</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="adress">Adress</string>
    <string name="phone">Phone number</string>
    <string name="add">Add</string>
    <string name="search">Enter to search...</string>
    <string name="empty">Fields is empty!</string>
    <string name="update_db">The database is updated</string>
</resources>
