<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:paddingBottom="0dp"
              android:paddingLeft="0dp"
              android:paddingRight="0dp"
              android:paddingTop="0dp">
    <!--tools:context="com.example.ruslan.dbproject.MainActivity$PlaceholderFragment">-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/size_small_24"
                        android:layout_height="@dimen/size_small_24"
                        android:layout_marginBottom="60dp"
                        android:layout_marginLeft="@dimen/size_small_24"
                        android:layout_marginTop="60dp"
                        android:src="@drawable/ic_person_black_24dp"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:layout_marginLeft="@dimen/size_small_24"
                            android:hint="@string/first_name"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:layout_marginLeft="@dimen/size_small_24"
                            android:hint="@string/last_name"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_big_72"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/size_small_24"
                    android:layout_height="@dimen/size_small_24"
                    android:layout_marginLeft="@dimen/size_small_24"
                    android:layout_marginTop="@dimen/size_small_24"
                    android:src="@drawable/ic_home_black_24dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etAdress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginLeft="@dimen/size_small_24"
                        android:hint="@string/adress"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_big_72"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/size_small_24"
                    android:layout_height="@dimen/size_small_24"
                    android:layout_marginLeft="@dimen/size_small_24"
                    android:layout_marginTop="@dimen/size_small_24"
                    android:src="@drawable/ic_call_black_24dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:maxLength="14"
                        android:layout_marginLeft="@dimen/size_small_24"
                        android:hint="@string/phone"
                        android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/add"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
